--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ services:
   - docker
 scripts:
   - docker build -t ambeskaradvait/node .
-  - docker images advait/node
+  - docker images ambeskaradvait/node
