--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ scripts:
   - docker build -t ambeskaradvait/docker-test .
   - docker images ambeskaradvait/docker-test
 
+before_install:
+  - gem update --system
+  - gem install bundler
+  
+gemfile: gemfile
+
 before_deploy:
   - docker login -u ambeskaradvait -p Advait25@1
 
